--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
 Flask==2.0.3
-google-cloud-datastore==2.4.0
-google-auth==2.6.0
-requests==2.27.1
+google-cloud-firestore==2.3.4
+google-cloud-storage==2.1.0
+google-cloud-logging==3.0.0
+google-cloud-error-reporting==1.5.0
+gunicorn==20.1.0
+six==1.16.0
+
+Werkzeug~=2.0.3
+requests~=2.27.1
